--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 
 	<!--/ /---- Put your name in the title of the page ----/ /-->
-	<title>Venkatesh Prasad</title>
+	<title>ADITYA C P</title>
 	
 	<!--/ /-------- Normalize CSS --------/ /-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         <div class="wrapper">
             
 			<div class="logo-container">
-				<h1>Your<br>Name<br>Portfolio</h1>
+				<h1>ADITYA C P<br><br>Portfolio</h1>
 
 				<!-- ------------------------------------------------------
 				Note that the image of the logo is linked to the home page.
@@ -78,7 +78,7 @@
                     Use the page.html file to make that page. Also link the 
                     anchor tag in the paragraph below to the same page.
                     ------------------------------------------------------- -->
-                	<a href="#"><img src="https://dummyimage.com/510x300/c4c4c4/fff&text=Featured+Project" alt="image"></a>
+                	<a href="#"><img src="https://dcuemygtqibgfzxmpfds.supabase.co/storage/v1/object/public/vpimgs/cat.jpeg?" alt="image"></a>
                 </article>
                 
                 <article>
