--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- ------------------------------------------------------
 				Note that the image of the logo is linked to the home page.
 				------------------------------------------------------- -->
-				<a href="index.html"><img src="https://github.com/VAMPIR4894/Portfolio-AdityaCP/blob/main/PIC.jpeg" alt="logo image" id="logo"></a>
+				<a href="index.html"><img src="https://media.istockphoto.com/id/1097490360/vector/vector-illustration-of-cute-black-cat.jpg?s=612x612&w=0&k=20&c=Ef0qYl79aZJ6NJXJVbJ0onjXVNnSyqrN_TKPjieAIGE=" alt="logo image" id="logo"></a>
 			</div>
             
             
